fixed overflow file list & empty file name on blur

--- a/browser/render/components/snippet-item-multi-files/snippet-item-multi-file.sass
+++ b/browser/render/components/snippet-item-multi-files/snippet-item-multi-file.sass
@@ -92,6 +92,7 @@
   .file-list
     width: 20%
     max-height: 300px
+    overflow-y: scroll
     ul
       width: 100%
       height: 100%
